--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~8.2.4",
     "@angular/material": "^8.2.3",
+    "@angular/material-moment-adapter": "^11.2.4",
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
     "bootstrap": "^4.6.0",
     "hammerjs": "^2.0.8",
+    "moment": "^2.29.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
